--- a/html/js.html
+++ b/html/js.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>How-To.com | Look At Free How-To's!</title>
+    <title>How-To.com | How-To Make Kitty Faces In JavaScript! </title>
     <link rel="stylesheet" href="../css/style.css"/>
   </head>
   <body>
